--- a/components/_button.scss
+++ b/components/_button.scss
@@ -34,9 +34,8 @@ input {
     font-size: 1rem;
     font-style: italic;
     @include respond(phone){
-        font-size: 1.2rem;
-        size: auto;
-  
-       
+        font-size: .7rem;
+        margin-block-start: 1.4em;
+        margin-block-end: 1.5em;
     }
 }
