--- a/components/_form.scss
+++ b/components/_form.scss
@@ -4,7 +4,7 @@
     display: grid;
     grid-template-columns: 1fr auto;
     @include respond(phone){
-        grid-template-columns: 30%;
+        grid-template-columns: auto;
     }
     &-list {
         background: $color-list;
@@ -29,19 +29,19 @@
         grid-gap: 1rem;
         align-items: center;
         border-bottom: 1px solid var(--gray);
-        font-size: 1rem;
+        font-size: 1.1rem;
         @include respond(phone){
-            grid-template-columns: .1fr .4fr .1fr;
+            grid-template-columns: .1fr .4fr .2;
             grid-gap: .5em;
             padding: .2em 0;
-            font-size: .8em;
+            font-size: 1em;
         }
     }
 
         .shopping-item input[type="checkbox"] {
             margin-right: 1rem;
             @include respond(phone){
-                margin-right: .5rem;
+                margin-right: .9rem;
                 justify-content: center;;
             }
         }
