--- a/style.css
+++ b/style.css
@@ -15,8 +15,10 @@ body {
   align-items: start;
   justify-items: center;
   background-color: lightblue;
-  font-family: "Montserrat", sans-serif;
-  overflow-x: hidden; }
+  font-family: "Mukta", sans-serif; }
+  @media only screen and (max-width: 37.5em) {
+    body {
+      display: flex; } }
 
 ::selection {
   background-color: lightyellow; }
@@ -26,9 +28,9 @@ h2 {
   padding: 1.5em; }
   @media only screen and (max-width: 37.5em) {
     h2 {
-      margin: .4em;
-      padding: .6em;
-      font-size: 1em; } }
+      margin: .2em;
+      padding: .4em;
+      font-size: 1.1em; } }
 
 .shopping-item button {
   font-style: inherit;
@@ -50,8 +52,8 @@ button {
   border-radius: .5rem; }
   @media only screen and (max-width: 37.5em) {
     button {
-      padding: 10px 10px;
-      margin: 4px 14px; } }
+      padding: 5px 8px;
+      margin: 4px 40px; } }
   buttonbutton:hover {
     opacity: 0.6; }
 
@@ -60,7 +62,7 @@ input {
   font-style: italic; }
   @media only screen and (max-width: 37.5em) {
     input {
-      font-size: .7rem;
+      font-size: .8rem;
       margin-block-start: 1.4em;
       margin-block-end: 1.5em; } }
 
@@ -70,7 +72,7 @@ input {
   grid-template-columns: 1fr auto; }
   @media only screen and (max-width: 37.5em) {
     .shopping {
-      grid-template-columns: 30%; } }
+      grid-template-columns: auto; } }
   .shopping-list {
     background: white;
     padding: 3rem;
@@ -90,19 +92,19 @@ input {
   grid-gap: 1rem;
   align-items: center;
   border-bottom: 1px solid var(--gray);
-  font-size: 1rem; }
+  font-size: 1.1rem; }
   @media only screen and (max-width: 37.5em) {
     .shopping-item {
-      grid-template-columns: .1fr .4fr .1fr;
+      grid-template-columns: .1fr .4fr .2;
       grid-gap: .5em;
       padding: .2em 0;
-      font-size: .8em; } }
+      font-size: 1em; } }
 
 .shopping-item input[type="checkbox"] {
   margin-right: 1rem; }
   @media only screen and (max-width: 37.5em) {
     .shopping-item input[type="checkbox"] {
-      margin-right: .5rem;
+      margin-right: .9rem;
       justify-content: center; } }
 
 .shopping-item input[type="checkbox"]:checked + .itemName {
