--- a/components/_form.scss
+++ b/components/_form.scss
@@ -3,6 +3,8 @@
 .shopping {
     display: grid;
     grid-template-columns: 1fr auto;
+    background-color: $color-background;
+  
     @include respond(phone){
         grid-template-columns: auto;
     }
