--- a/style.css
+++ b/style.css
@@ -71,7 +71,8 @@ input {
 /* Shopping Form */
 .shopping {
   display: grid;
-  grid-template-columns: 1fr auto; }
+  grid-template-columns: 1fr auto;
+  background-color: lightblue; }
   @media only screen and (max-width: 37.5em) {
     .shopping {
       grid-template-columns: auto; } }
