--- a/style.css
+++ b/style.css
@@ -111,3 +111,32 @@ input {
 
 .shopping-item input[type="checkbox"]:checked + .itemName {
   opacity: 0.5; }
+
+/* Side Clock */
+.clock {
+  width: 10rem;
+  height: 10rem;
+  border: 10px solid white;
+  border-radius: 50%;
+  margin: 50px auto;
+  position: relative;
+  padding: 2rem;
+  box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1), inset 0 0 0 3px #EFEFEF, inset 0 0 10px black, 0 0 10px rgba(0, 0, 0, 0.2); }
+  .clock-interface {
+    position: flex;
+    width: 100%;
+    height: 100%;
+    transform: translateY(-3px); }
+  .clock .hand {
+    width: 50%;
+    height: 6px;
+    background: black;
+    position: absolute;
+    top: 50%;
+    transform-origin: 100%;
+    transform: rotate(90deg);
+    transition: all 0.05s;
+    transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1); }
+    .clock .hand-second-hand {
+      height: 4px;
+      opacity: 0.7; }
