--- a/components/_clock.scss
+++ b/components/_clock.scss
@@ -1,8 +1,8 @@
 /* Side Clock */
 
 .clock {
-    width: 10rem;
-    height: 10rem;
+    width: 8rem;
+    height: 8rem;
     border: 10px solid white;
     border-radius: 50%;
     margin: 50px auto;
@@ -23,7 +23,7 @@
 
     .hand {
         width: 50%;
-        height: 6px;
+        height: 4px;
         background: black;
         position: absolute;
         top: 50%;
@@ -31,10 +31,10 @@
         transform: rotate(90deg);
         transition: all 0.05s;
         transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
-      
-      &-second-hand {
-        height: 4px;
-        opacity: 0.7;
-      }
+    
+      &.second-hand {
+        height: 3px;
+        opacity: 0.4;
+      } 
   }
 }
