--- a/style.css
+++ b/style.css
@@ -114,8 +114,8 @@ input {
 
 /* Side Clock */
 .clock {
-  width: 10rem;
-  height: 10rem;
+  width: 8rem;
+  height: 8rem;
   border: 10px solid white;
   border-radius: 50%;
   margin: 50px auto;
@@ -129,7 +129,7 @@ input {
     transform: translateY(-3px); }
   .clock .hand {
     width: 50%;
-    height: 6px;
+    height: 4px;
     background: black;
     position: absolute;
     top: 50%;
@@ -137,6 +137,6 @@ input {
     transform: rotate(90deg);
     transition: all 0.05s;
     transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1); }
-    .clock .hand-second-hand {
-      height: 4px;
-      opacity: 0.7; }
+    .clock .hand.second-hand {
+      height: 3px;
+      opacity: 0.4; }
