--- a/components/_clock.scss
+++ b/components/_clock.scss
@@ -1,11 +1,11 @@
 /* Side Clock */
 
 .clock {
-    width: 8rem;
-    height: 8rem;
+    width: 7rem;
+    height: 7rem;
     border: 10px solid white;
     border-radius: 50%;
-    margin: 50px auto;
+    margin: 20px auto;
     position: relative;
     padding: 2rem;
     box-shadow:
@@ -13,13 +13,18 @@
       inset 0 0 0 3px #EFEFEF,
       inset 0 0 10px black,
       0 0 10px rgba(0,0,0,0.2);
+      
+      @include respond(phone){
+       display: none;
+    }
 
       &-interface {
-        position: flex;
+        position: grid;
         width: 100%;
         height: 100%;
         transform: translateY(-3px);
       }
+      
 
     .hand {
         width: 50%;
@@ -38,3 +43,4 @@
       } 
   }
 }
+
