--- a/style.css
+++ b/style.css
@@ -114,16 +114,19 @@ input {
 
 /* Side Clock */
 .clock {
-  width: 8rem;
-  height: 8rem;
+  width: 7rem;
+  height: 7rem;
   border: 10px solid white;
   border-radius: 50%;
-  margin: 50px auto;
+  margin: 20px auto;
   position: relative;
   padding: 2rem;
   box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1), inset 0 0 0 3px #EFEFEF, inset 0 0 10px black, 0 0 10px rgba(0, 0, 0, 0.2); }
+  @media only screen and (max-width: 37.5em) {
+    .clock {
+      display: none; } }
   .clock-interface {
-    position: flex;
+    position: grid;
     width: 100%;
     height: 100%;
     transform: translateY(-3px); }
