--- a/style.css
+++ b/style.css
@@ -79,8 +79,8 @@ input {
     background: white;
     padding: 3rem;
     border-radius: 1rem;
-    width: 500px;
-    margin: 4rem 0;
+    width: 450px;
+    margin: 14em 0;
     font-size: 1rem; }
     .shopping-list-list ul {
       list-style: none;
