--- a/components/_form.scss
+++ b/components/_form.scss
@@ -12,8 +12,9 @@
         background: $color-list;
         padding: 3rem;
         border-radius: 1rem;
-        width: 500px;
-        margin: 4rem 0;
+        width: 450px;
+        margin: 14em 0;
+   
         font-size: 1rem;
 
     &-list ul {
