--- a/components/_clock.scss
+++ b/components/_clock.scss
@@ -5,9 +5,9 @@
     height: 7rem;
     border: 10px solid white;
     border-radius: 50%;
-    margin: 20px auto;
+    margin: 20px 1px;
     position: relative;
-    padding: 2rem;
+    padding: 1.5rem;
     box-shadow:
       0 0 0 4px rgba(0,0,0,0.1),
       inset 0 0 0 3px #EFEFEF,
