--- a/components/_form.scss
+++ b/components/_form.scss
@@ -10,11 +10,11 @@
     }
     &-list {
         background: $color-list;
-        padding: 3rem;
+        padding: 8%;
         border-radius: 1rem;
         width: 450px;
-        margin: 14em 0;
-   
+        margin: 30px auto;
+
         font-size: 1rem;
 
     &-list ul {
